art/dev/kong-ingress-art-seo-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/strip-path: "true"
  name: kong-ingress-dev-art-seo-service
  namespace: int
spec:
  ingressClassName: kong-dev-art
  rules:
  - http:
      paths:
      - 
        path: /seo
        pathType: Prefix
        backend:
          service:
            name: art-seo-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress-dev-art-seo-service-metatags
  namespace: int
  annotations:
    konghq.com/plugins: kong-cors-default
    konghq.com/plugins: seo-metatags-cache
    konghq.com/plugins: seo-metatags-rewrite
spec:
  ingressClassName: kong-dev-art
  rules:
  - http:
      paths:
      - path: /v2/metatags
        pathType: Prefix
        backend:
          service:
            name: art-seo-service
            port:
              number: 80
